# varint_encoder

./: CMakeLists.txt  LICENSE.md  README.md
dependencies/: CMakeLists.txt
include/: varint_encoder.h
src/: CMakeLists.txt  varint_encoder.cpp
test/: CMakeLists.txt  test_varint_encoder.cpp
